# fips-android

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  justfile
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/space/atlantislabs/fips/: FipsViewModel.kt  MainActivity.kt  StatusScreen.kt
android/app/src/main/java/space/atlantislabs/fips/model/: DashboardModels.kt
android/app/src/main/java/space/atlantislabs/fips/service/: FipsNodeService.kt  FipsTunService.kt
android/app/src/main/res/drawable/: ic_mesh.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
fips-mobile/: Cargo.toml  build.rs
fips-mobile/src/: dns_intercept.rs  fips_mobile.udl  lib.rs  tun_adapter.rs
uniffi-bindgen/: Cargo.toml
